# csvengine

./: .gitignore  BENCHMARKING.md  CMakeLists.txt  LICENSE  README.md  SECIFICATION.md  SPECIFICATION.md  aaa.diff  build.sh  go.sh
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt
benchmarks/inc/: helpers.hpp
benchmarks/src/: buffer_benchmark.cpp  buffers_comparison_benchmark.cpp  helpers.cpp  parser_benchmark.cpp  reader_benchmark.cpp  record_vs_recordview_benchmark.cpp  streambuffer_benchmark.cpp
demo/: CMakeLists.txt  main.cpp
engine/: CMakeLists.txt
engine/inc/: csvbuffer.hpp  csvconfig.hpp  csvdataview.hpp  csvengine.hpp  csverrors.hpp  csvparser.hpp  csvreader.hpp  csvrecord.hpp
engine/inc/csvbuffer/: csvbuffer.hpp  csvmappedbuffer.hpp  csvstreambuffer.hpp
engine/inc/csvparser/: csvparser.hpp  csvparserbase.hpp  csvquotingparser.hpp  csvsimdparser.hpp  csvsimpleparser.hpp
engine/inc/csvreader/: csvreader.hpp
engine/inc/csvrecord/: csvrecord.hpp  csvrecordview.hpp
engine/src/: csvmappedbuffer.cpp  csvparser.cpp  csvparser_quoting_lenient_parser.cpp  csvparser_quoting_strict_parser.cpp  csvparser_simple_parser.cpp  csvreader.cpp  csvreader_recordview.cpp  csvrecord.cpp
engine/src/csvparser/: csvparser.cpp  csvparser_quoting_strict_parser.cpp  csvparser_simd_parser.cpp
engine/src/csvparser/quoting/: csvparser_lenientquotingparser.cpp  csvparser_quoting_lenient_parser.cpp  csvparser_quoting_strict_parser.cpp  csvparser_strictquotingparser.cpp
engine/src/csvparser/simple/: csvparser_recordview_simple_parser.cpp  csvparser_simdparser.cpp  csvparser_simple_parser.cpp  csvparser_simpleparser.cpp  csvparser_simpleparserbase.cpp  csvviewparser_simple_parser.cpp  csvviewparser_simpleparser.cpp
engine/src/csvreader/: csvreader.cpp  csvreaderbase.cpp  csvviewreader.cpp
tests/: CMakeLists.txt  csvbuffer_test.cpp  csvparser_lenient_test.cpp  csvparser_test.cpp  csvreader_test.cpp  csvrecord_test.cpp  tests.cpp
tests/csvparser_tests/: csvparser_quoting_strict_test.cpp  csvparser_simple_test.cpp
tests/mocks/: csvbuffer_mock.hpp
tests/src/: csvbuffer_test.cpp  csvrecordview_test.cpp  record_view_test.cpp
tests/src/csvbuffer_tests/: csvmappedbuffer_test.cpp  csvstreambuffer_test.cpp
tests/src/csvparser_tests/: csvparser_quoting_lenient_test.cpp  csvparser_quoting_strict_test.cpp  csvparser_simple_test.cpp
tests/src/csvreader_tests/: csvreader_test.cpp  csvviewreader_test.cpp
tests/src/csvrecord_tests/: csvrecord_test.cpp  csvrecordview_test.cpp
tests/test_data/: quoting.csv  simple_file.csv  testdata.hpp
